--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.HealthCare"
         tools:targetApi="31">
         <activity
+            android:name=".Chat_page"
+            android:exported="false" />
+        <activity
+            android:name=".Doctor_profile"
+            android:exported="false" />
+        <activity
             android:name=".Notice"
             android:exported="false" />
         <activity
