--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthCare"
         tools:targetApi="31">
+        <activity android:name=".Welcome"
+            android:exported="false"/>
         <activity
             android:name=".Chat_page"
             android:exported="false" />
